Atualização do projeto